* multiple fixes for MacOSX, added macosx/ directory (Ken McIvor)
* reading multiple y columns from data file: "@+ < foo.xy:0,5/6/7" (or :0,5-7)
* "Tip of the day" removed (tips.txt deleted). 
* added SVG icon (fityk.svg) and MIME type info (fityk.xml) 
* removed files AUTHORS and ChangeLog
* the API is now a Fityk class
* GUI: setting baseline as convex hull of data points (experimental)
* minor improvements and bug fixes (e.g. "reset" was not working in 0.8.1)

User-visible changes in version 0.8.1  (2007-04-23):
* extended version info can be shown by "info+ version"
* displaying Gaussian-FWHM and Lorentzian-FWHM of Voigt function
* GUI, MS Windows: configuration is now stored in files, not in registry
* GUI: support for any numbers of config files. 
* changes in command-line parameters
* "_EXECUTED_SCRIPT_DIR_/" in scripts is replaced with the script directory
* GUI: logarithmic x scale and reversed y scale 
* bug fixes

User-visible changes in version 0.8.0  (2007-03-19):
* libfityk (fityk library) if introduced. About half of the fityk source code 
  goes into the library; the rest is GUI and CLI.
  The library has minimal public well-documented C++ API.
* experimental(!) python bindings to the library are prepared using SWIG
* bug fixes, of course

User-visible changes in version 0.7.8  (2007-03-02):
* syntax changed for dataset sum (was: @+ < @0 + @1; is: @+ = @0 + @1)
* introduced dataset operations sum_same_x and avg_same_x, 
  eg. "@+ = sum_same_x @0 + @1" (in GUI: Data > Merge points)
* command "info version"
* changed options to "set verbosity"
* GUI: error bars for data
* voigt(x,y) function for data transformations and variable definitions
* new option in settings "epsilon" used for floating point comparision.
* GUI: script debugger dialog was finished; "Edit init file" was added to menu
* option data-default-sigma with possible values: one, sqrt.
* plot command: dataset can be specified using "in @n" or "in @*", 